fix(emoji): Remove vertical overflow from composer, allow for popups

--- a/internal_packages/composer/stylesheets/composer.less
+++ b/internal_packages/composer/stylesheets/composer.less
@@ -290,7 +290,7 @@ body.platform-win32 {
   .compose-body {
     flex: 1;
     cursor: text;
-    overflow: auto;
+    overflow-x: auto;
     position: relative;
     margin: 0 8px;
 
